--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,10 +16,10 @@ jobs:
           New-Item -Path "$HOME\Documents\Autohotkey" -ItemType Directory -Force
           New-Item -ItemType Junction -Path "$HOME\Documents\Autohotkey\Lib" -Target "$(pwd)\Lib"
 
-      - run: choco install autohotkey
+      - run: choco install autohotkey sass
       - name: Compile HTML
         run: >
-          & "C:\Program Files\AutoHotkey\AutohotkeyU64.exe" "/ErrorStdOut" "Lib\EzGui\projectCompile.ahk" -web "web" -includer "extensions" 2>&1 | Out-Host
+          & "C:\Program Files\AutoHotkey\AutohotkeyU64.exe" "/ErrorStdOut" "Lib\EzGui\projectCompile.ahk" -sass ".\web\css.sass" ".\web\minify\css.css" -web "web" -includer "extensions" 2>&1 | Out-Host
       - name: Compile AHK
         run: >
           & "C:\Program Files\AutoHotkey\Compiler\Ahk2Exe.exe" "/ErrorStdOut" "/in" "main.ahk" 2>&1 | Out-Host
